Adding Codecov for assistive-webdriver subdirectory

--- a/.github/workflows/tcp-web-listener.yml
+++ b/.github/workflows/tcp-web-listener.yml
@@ -20,5 +20,5 @@ jobs:
             tcp-web-listener-yarn-
       - run: yarn --frozen-lockfile
         working-directory: ./tcp-web-listener
-      - run: yarn test --coverage
+      - run: yarn test
         working-directory: ./tcp-web-listener
