--- a/.github/workflows/assistive-webdriver.yml
+++ b/.github/workflows/assistive-webdriver.yml
@@ -26,6 +26,12 @@ jobs:
         working-directory: ./assistive-webdriver
       - run: yarn test --coverage
         working-directory: ./assistive-webdriver
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./assistive-webdriver/coverage/lcov.info
+          name: assistive-webdriver
+          flags: assistivewebdriver
   docker:
     runs-on: ubuntu-latest
     steps:
