--- a/assistive-webdriver/package.json
+++ b/assistive-webdriver/package.json
@@ -5,6 +5,24 @@
   "main": "dist/client/index.js",
   "module": "dist/client/index.mjs",
   "typings": "dist/client/index.d.ts",
+  "author": "David-Emmanuel Divernois <david-emmanuel.divernois@amadeus.com>",
+  "homepage": "https://github.com/AmadeusITGroup/Assistive-Webdriver",
+  "bugs": "https://github.com/AmadeusITGroup/Assistive-Webdriver/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AmadeusITGroup/Assistive-Webdriver.git",
+    "directory": "tcp-web-listener"
+  },
+  "keywords": [
+    "automation",
+    "selenium",
+    "testing",
+    "webdriver",
+    "webdriverjs",
+    "screen readers",
+    "a11y",
+    "accessibility"
+  ],
   "files": [
     "assistive-webdriver",
     "dist",
