--- a/.github/workflows/assistive-webdriver.yml
+++ b/.github/workflows/assistive-webdriver.yml
@@ -32,6 +32,20 @@ jobs:
           file: ./assistive-webdriver/coverage/lcov.info
           name: assistive-webdriver
           flags: assistivewebdriver
+      - run: yarn pack
+        working-directory: ./assistive-webdriver
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: assistive-webdriver.tgz
+          path: assistive-webdriver/assistive-webdriver-v0.0.0.tgz
+      - if: github.event == 'push' && startsWith(github.ref, 'refs/tags/assistive-webdriver/')
+        name: yarn publish
+        run: |
+          yarn version --no-git-tag-version --new-version $(basename ${{ github.ref }})
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          yarn publish
+        working-directory: ./assistive-webdriver
   docker:
     runs-on: ubuntu-latest
     steps:
