--- a/.github/workflows/tcp-web-listener.yml
+++ b/.github/workflows/tcp-web-listener.yml
@@ -22,3 +22,17 @@ jobs:
         working-directory: ./tcp-web-listener
       - run: yarn test
         working-directory: ./tcp-web-listener
+      - run: yarn pack
+        working-directory: ./tcp-web-listener
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: tcp-web-listener.tgz
+          path: tcp-web-listener/tcp-web-listener-v0.0.0.tgz
+      - if: github.event == 'push' && startsWith(github.ref, 'refs/tags/tcp-web-listener/')
+        name: yarn publish
+        run: |
+          yarn version --no-git-tag-version --new-version $(basename ${{ github.ref }})
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          yarn publish
+        working-directory: ./tcp-web-listener
