--- a/assistive-webdriver/package.json
+++ b/assistive-webdriver/package.json
@@ -1,6 +1,7 @@
 {
   "name": "assistive-webdriver",
   "version": "0.0.0",
+  "description": "Assistive-Webdriver is a tool to automate end-to-end web application tests with a screen reader.",
   "bin": "assistive-webdriver",
   "main": "dist/client/index.js",
   "module": "dist/client/index.mjs",
