--- a/text-to-socket-engine/resource.rc
+++ b/text-to-socket-engine/resource.rc
@@ -21,8 +21,8 @@ END
 1 TYPELIB "TextToSocketEngine.tlb"
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION 0,0,0,0
+ PRODUCTVERSION 0,0,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -40,14 +40,14 @@ BEGIN
             VALUE "Comments", "\0"
             VALUE "CompanyName", "Amadeus s.a.s.\0"
             VALUE "FileDescription", "Text-To-Socket-Engine\0"
-            VALUE "FileVersion", "1, 0, 0, 1\0"
+            VALUE "FileVersion", "0,0,0,0\0"
             VALUE "InternalName", "TextToSocketEngine\0"
             VALUE "LegalCopyright", "\0"
             VALUE "LegalTrademarks", "\0"
             VALUE "OriginalFilename", "TextToSocketEngine.dll\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "Assistive-Webdriver\0"
-            VALUE "ProductVersion", "1, 0, 0, 1\0"
+            VALUE "ProductVersion", "0,0,0,0\0"
             VALUE "SpecialBuild", "\0"
         END
     END
