--- a/assistive-webdriver/package.json
+++ b/assistive-webdriver/package.json
@@ -36,10 +36,9 @@
     "http-proxy": "1.18.1",
     "koa": "2.12.0",
     "koa-route": "3.2.0",
+    "node-fetch": "2.6.0",
     "p-queue": "6.4.0",
     "pngjs": "5.0.0",
-    "request": "2.88.2",
-    "request-promise-native": "1.0.8",
     "stream-json": "1.5.0",
     "uuid": "8.1.0",
     "virtualbox-soap": "3.0.3",
@@ -54,12 +53,11 @@
     "@types/co-body": "5.1.0",
     "@types/http-proxy": "1.17.4",
     "@types/jest": "25.2.3",
+    "@types/node-fetch": "2.5.7",
     "@types/koa": "2.11.3",
     "@types/koa-bodyparser": "4.3.0",
     "@types/koa-route": "3.2.4",
     "@types/pngjs": "3.4.2",
-    "@types/request": "2.48.5",
-    "@types/request-promise-native": "1.0.17",
     "@types/selenium-webdriver": "4.0.9",
     "@types/stream-json": "1.0.1",
     "@types/uuid": "8.0.0",
