--- a/assistive-webdriver/package.json
+++ b/assistive-webdriver/package.json
@@ -36,6 +36,7 @@
     "http-proxy": "1.18.1",
     "koa": "2.12.0",
     "koa-route": "3.2.0",
+    "node-fetch": "2.6.0",
     "p-queue": "6.4.0",
     "pngjs": "5.0.0",
     "stream-json": "1.5.0",
@@ -52,6 +53,7 @@
     "@types/co-body": "5.1.0",
     "@types/http-proxy": "1.17.4",
     "@types/jest": "25.2.3",
+    "@types/node-fetch": "2.5.7",
     "@types/koa": "2.11.3",
     "@types/koa-bodyparser": "4.3.0",
     "@types/koa-route": "3.2.4",
