--- a/vagrant/msedge-win10/Vagrantfile
+++ b/vagrant/msedge-win10/Vagrantfile
@@ -76,7 +76,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "tcp-web-listener",
   type: "shell",
   inline: <<-SHELL
-      c:\\node-v12.16.3-win-x64\\npm.cmd install -g file:///c:/vagrant/software/tcp-web-listener.tgz
+      c:\\node-v12.16.3-win-x64\\npm.cmd install --scripts-prepend-node-path=true -g file:///c:/vagrant/software/tcp-web-listener.tgz
   SHELL
 
   config.vm.provision "start-cmd", type: "file", source: "start.cmd", destination: "C:\\start.cmd"
