--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,11 @@ jobs:
           asset_content_type: application/zip
   test-e2e:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        vm:
+          - msedge-win10
+          - ubuntu
     needs:
       - build-assistive-webdriver
       - build-tcp-web-listener
@@ -181,28 +186,28 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: tcp-web-listener.tgz
-          path: ./vagrant/msedge-win10/software/
+          path: ./vagrant/${{ matrix.vm }}/software/
       - uses: actions/download-artifact@v2
         with:
           name: text-to-socket-engine-x86.zip
-          path: ./vagrant/msedge-win10/software/
+          path: ./vagrant/${{ matrix.vm }}/software/
       - run: |
           touch software/.tcp-web-listener.tgz
           touch software/.text-to-socket-engine-x86.zip
           ./download.sh
         continue-on-error: true
         name: "Download software (1)"
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
       - run: ./download.sh
         continue-on-error: true
         name: "Download software (2)"
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
       - run: ./download.sh
         name: "Download software (3)"
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
       - name: "Create VM (1)"
         run: ./createVM.sh
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
         timeout-minutes: 45
         continue-on-error: true
         id: createVM1
@@ -212,7 +217,7 @@ jobs:
           killall vagrant ruby || true
           vagrant destroy -f
           ./createVM.sh
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
         timeout-minutes: 45
         continue-on-error: true
         id: createVM2
@@ -222,11 +227,11 @@ jobs:
           killall vagrant ruby || true
           vagrant destroy -f
           ./createVM.sh
-        working-directory: ./vagrant/msedge-win10
+        working-directory: ./vagrant/${{ matrix.vm }}
         timeout-minutes: 45
       - run: vboxwebsrv -A null &
       - run: |
-          yarn nyc-server -c ../vagrant/msedge-win10/vm-config.json --pid-file ../assistive-webdriver.pid &> ../assistive-webdriver.log &
+          yarn nyc-server -c ../vagrant/${{ matrix.vm }}/vm-config.json --pid-file ../assistive-webdriver.pid &> ../assistive-webdriver.log &
           while ! nc -z 127.0.0.1 3000; do sleep 1; done
         name: "Start assistive-webdriver server"
         working-directory: ./assistive-webdriver
