--- a/assistive-webdriver/tsconfig.json
+++ b/assistive-webdriver/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "noEmitOnError": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true
