--- a/vagrant/msedge-win10/Vagrantfile
+++ b/vagrant/msedge-win10/Vagrantfile
@@ -1,17 +1,8 @@
+load './Vagrantbasefile'
+
 Vagrant.configure("2") do |config|
   config.vm.box = "MSEdge-Win10"
   config.vm.box_url = "file://./software/MSEdge%20-%20Win10.box"
-  config.vm.guest = :windows
-  config.vm.communicator = "winrm"
-  config.winrm.username = "IEUser"
-  config.winrm.password = "Passw0rd!"
-  config.winrm.transport = :plaintext
-  config.winrm.basic_auth_only = true
-  config.winrm.timeout = 1800
-  config.winrm.retry_limit = 60
-  config.winrm.retry_delay = 1
-  config.vm.boot_timeout = 600
-  config.vm.graceful_halt_timeout = 600
 
   config.vm.provider "virtualbox" do |v|
     v.linked_clone = true
@@ -85,6 +76,7 @@ Vagrant.configure("2") do |config|
     type: "shell",
     reboot: true,
     inline: <<-SHELL
+      netsh advfirewall firewall add rule name="Allow WinRM" localport=5985 protocol=tcp dir=in action=allow
       netsh advfirewall firewall add rule name="Allow selenium" localport=4444 protocol=tcp dir=in action=allow
       netsh advfirewall firewall add rule name="Allow tcp-web-listener" localport=7779 protocol=tcp dir=in action=allow
       \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
