--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "virtualbox" do |v|
     v.linked_clone = true
-    v.name = "msedge-win10"
+    v.name = "win10-chromium-nvda"
     v.customize ["modifyvm", :id, "--vram", "64"]
     v.customize ["setextradata", :id, "GUI/MaxGuestResolution", "any"]
     v.customize ["modifyvm", :id, "--audio", "null", "--audioout", "on", "--audiocontroller", "hda"]
