--- a/assistive-webdriver/package.json
+++ b/assistive-webdriver/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AmadeusITGroup/Assistive-Webdriver.git",
-    "directory": "tcp-web-listener"
+    "directory": "assistive-webdriver"
   },
   "keywords": [
     "automation",
