--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "private": true,
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.6.1",
+    "@typescript-eslint/parser": "4.6.1",
+    "eslint": "7.12.1",
+    "eslint-config-prettier": "6.15.0",
     "prettier": "2.1.2"
   },
   "scripts": {
+    "lint": "eslint .",
     "format": "prettier .",
     "format:check": "pnpm format -- --check",
     "format:fix": "pnpm format -- --write"
