--- a/vagrant/win10-chromium-nvda/vm-config.json
+++ b/vagrant/win10-chromium-nvda/vm-config.json
@@ -6,6 +6,7 @@
       "vm": "win10-chromium-nvda",
       "snapshot": "nvda"
     },
-    "screenReader": true
+    "screenReader": true,
+    "vmHttpScreenReaderPath": "/screen-reader"
   }
 }
