--- a/.prettierignore
+++ b/.prettierignore
@@ -5,5 +5,6 @@ node_modules
 coverage
 /pnpm-lock.yaml
 /components/assistive-webdriver/config-schema.json
+/components/assistive-playwright-server/src/validation.js
 /doc/apidoc-input
 /doc/apidoc-output
