--- a/vagrant/win10-chromium-nvda/Vagrantfile
+++ b/vagrant/win10-chromium-nvda/Vagrantfile
@@ -28,6 +28,14 @@ Vagrant.configure("2") do |config|
       Set-ItemProperty -Path 'HKCU:\\Software\\Microsoft\\Windows\\CurrentVersion\\PrecisionTouchPad' -Name AAPThreshold -Type DWord -Value 0
   SHELL
 
+  config.vm.provision "VC_redist",
+    type: "shell",
+    inline: <<-SHELL
+      Copy-Item "C:\\vagrant\\software\\VC_redist.x64.exe" -Destination "C:\\"
+      $p = Start-Process -FilePath C:\\VC_redist.x64.exe -ArgumentList "/install","/quiet","/norestart" -Wait -NoNewWindow -PassThru
+      exit $p.ExitCode
+  SHELL
+
   config.vm.provision "nvda",
     type: "shell",
     inline: <<-SHELL
@@ -76,7 +84,7 @@ Vagrant.configure("2") do |config|
     inline: <<-SHELL
       netsh advfirewall firewall add rule name="Allow WinRM" localport=5985 protocol=tcp dir=in action=allow
       netsh advfirewall firewall add rule name="Allow selenium" localport=4444 protocol=tcp dir=in action=allow
-      netsh advfirewall firewall add rule name="Allow tcp-web-listener" localport=7779 protocol=tcp dir=in action=allow
+      netsh advfirewall firewall add rule name="Allow nodejs" dir=in action=allow program="c:\\node-v12.16.3-win-x64\\node.exe" enable=yes
       \$curPath = Get-ItemPropertyValue -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH
       Set-ItemProperty -Path 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment' -Name PATH -Type ExpandString -Value "\$curPath;c:\\node-v12.16.3-win-x64;c:\\chromedriver_win32;c:\\chrome-win"
       Set-ItemProperty -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Run' -Name StartCmd -Type String -Value 'c:\\start.cmd'
