Generating API documentation with Microsoft api-extractor and api-documenter

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .nyc_output
 dist
+build
 node_modules
 coverage
 *.tgz
 /components/assistive-webdriver/src/server/config.ts
 /components/assistive-webdriver/config-schema.json
 /components/vm-providers/src/config.ts
+/doc/apidoc-output
