--- a/components/assistive-webdriver/tsconfig.d.json
+++ b/components/assistive-webdriver/tsconfig.d.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
+    "declarationMap": true,
     "emitDeclarationOnly": true,
-    "outDir": "dist/client"
+    "outDir": "build/client"
   },
   "include": ["src/client"]
 }
