--- a/components/vm-providers/tsconfig.d.json
+++ b/components/vm-providers/tsconfig.d.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
+    "declarationMap": true,
     "emitDeclarationOnly": true,
-    "outDir": "dist"
+    "outDir": "build"
   },
   "include": ["src"]
 }
