--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,32 +26,32 @@ jobs:
           restore-keys: |
             assistive-webdriver-yarn-
       - run: yarn --frozen-lockfile
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - run: yarn lint
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - run: yarn format:check
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - run: yarn test --coverage
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - uses: codecov/codecov-action@v1
         with:
-          file: ./assistive-webdriver/coverage/lcov.info
+          file: ./components/assistive-webdriver/coverage/lcov.info
           name: assistive-webdriver
           flags: assistivewebdriver
       - run: yarn pack && mv assistive-webdriver-v0.0.0.tgz assistive-webdriver.tgz
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: assistive-webdriver.tgz
-          path: assistive-webdriver/assistive-webdriver.tgz
+          path: ./components/assistive-webdriver/assistive-webdriver.tgz
       - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/assistive-webdriver/')
         name: yarn publish
         run: |
           yarn version --no-git-tag-version --new-version $(basename ${{ github.ref }})
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           yarn publish
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
   build-tcp-web-listener:
     runs-on: ubuntu-latest
     steps:
@@ -72,23 +72,23 @@ jobs:
           restore-keys: |
             tcp-web-listener-yarn-
       - run: yarn --frozen-lockfile
-        working-directory: ./tcp-web-listener
+        working-directory: ./components/tcp-web-listener
       - run: yarn test
-        working-directory: ./tcp-web-listener
+        working-directory: ./components/tcp-web-listener
       - run: yarn pack && mv tcp-web-listener-v0.0.0.tgz tcp-web-listener.tgz
-        working-directory: ./tcp-web-listener
+        working-directory: ./components/tcp-web-listener
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: tcp-web-listener.tgz
-          path: tcp-web-listener/tcp-web-listener.tgz
+          path: components/tcp-web-listener/tcp-web-listener.tgz
       - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/tcp-web-listener/')
         name: yarn publish
         run: |
           yarn version --no-git-tag-version --new-version $(basename ${{ github.ref }})
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           yarn publish
-        working-directory: ./tcp-web-listener
+        working-directory: ./components/tcp-web-listener
   build-text-to-socket-engine:
     runs-on: windows-2019
     strategy:
@@ -101,20 +101,20 @@ jobs:
         with:
           node-version: "12.x"
       - run: node setVersion.js ${{ github.ref }}
-        working-directory: .\text-to-socket-engine
+        working-directory: .\components\text-to-socket-engine
       - run: |
           @echo on
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=${{ matrix.arch }}
           call build.cmd
         shell: cmd
-        working-directory: .\text-to-socket-engine
+        working-directory: .\components\text-to-socket-engine
       - run: 7z a text-to-socket-engine-${{ matrix.arch }}.zip register.cmd unregister.cmd TextToSocketEngine.dll
-        working-directory: .\text-to-socket-engine
+        working-directory: .\components\text-to-socket-engine
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: text-to-socket-engine-${{ matrix.arch }}.zip
-          path: text-to-socket-engine/text-to-socket-engine-${{ matrix.arch }}.zip
+          path: components/text-to-socket-engine/text-to-socket-engine-${{ matrix.arch }}.zip
   release-text-to-socket-engine:
     runs-on: ubuntu-latest
     needs: build-text-to-socket-engine
@@ -176,7 +176,7 @@ jobs:
           restore-keys: |
             assistive-webdriver-yarn-
       - run: yarn --frozen-lockfile
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
         env:
           ENABLE_COVERAGE: "1"
       - uses: actions/download-artifact@v2
@@ -227,25 +227,25 @@ jobs:
         timeout-minutes: 45
       - run: vboxwebsrv -v -A null --logfile vboxwebsrv.log &
       - run: |
-          yarn nyc-server -l debug -c ../vagrant/win10-chromium-nvda/vm-config.json --pid-file ../assistive-webdriver.pid &> ../assistive-webdriver.log &
+          yarn nyc-server -l debug -c ../../vagrant/win10-chromium-nvda/vm-config.json --pid-file ../../assistive-webdriver.pid &> ../../assistive-webdriver.log &
           while ! nc -z 127.0.0.1 3000; do sleep 1; done
         name: "Start assistive-webdriver server"
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - name: "test (1)"
         id: test1
         run: yarn nyc-tester -m nvda -k Insert -l debug
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
         continue-on-error: true
       - name: "test (2)"
         id: test2
         if: steps.test1.outcome == 'failure'
         run: yarn nyc-tester -m nvda -k Insert -l debug
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
         continue-on-error: true
       - name: "test (3)"
         if: steps.test2.outcome == 'failure'
         run: yarn nyc-tester -m nvda -k Insert -l debug
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - run: |
           ASSISTIVE_WEBDRIVER_PID=$(cat ./assistive-webdriver.pid)
           echo "Sending SIGINT to $ASSISTIVE_WEBDRIVER_PID"
@@ -259,10 +259,10 @@ jobs:
       - run: cat vboxwebsrv.log
         if: ${{ always() }}
       - run: yarn nyc-report
-        working-directory: ./assistive-webdriver
+        working-directory: ./components/assistive-webdriver
       - uses: codecov/codecov-action@v1
         with:
-          file: ./assistive-webdriver/coverage/lcov.info
+          file: ./components/assistive-webdriver/coverage/lcov.info
           name: e2e
           flags: e2e
       - name: "Upload VM"
