--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AmadeusITGroup/Assistive-Webdriver.git",
-    "directory": "assistive-webdriver"
+    "directory": "components/assistive-webdriver"
   },
   "keywords": [
     "automation",
