--- a/components/tcp-web-listener/package.json
+++ b/components/tcp-web-listener/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AmadeusITGroup/Assistive-Webdriver.git",
-    "directory": "tcp-web-listener"
+    "directory": "components/tcp-web-listener"
   },
   "keywords": [
     "http",
